--- a/Day1/index.html
+++ b/Day1/index.html
@@ -17,7 +17,7 @@
     <div>
         <div class="search">
             <input
-              id="city-input"
+              id="search-input"
               type="text"
               class="input"
               placeholder="What's on your mind...."
