--- a/Shop Search/index.html
+++ b/Shop Search/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filter List</title>
 </head>
-<body>
+<body id="main">
     <div>
         <div class="search">
             <input
