--- a/Shop Search/index.html
+++ b/Shop Search/index.html
@@ -2,19 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
-      crossorigin="anonymous"
-    /> 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filter List</title>
 </head>
 <body id="main">
-    <div>
+    <div class="header">
         <div class="search">
             <input
               id="search-input"
@@ -23,7 +18,11 @@
               placeholder="What's on your mind...."
             />
             <button class="btn" id="searchBtn"><i class="fas fa-search"></i></button>
+            </div>
+            <i class="fa fa-shopping-cart cart-icon"></i>
+            <span class='badge badge-warning' id='lblCartCount'> </span>
     </div>
+    
     <div id="container">
        
     </div>
