--- a/Shop Search/index.html
+++ b/Shop Search/index.html
@@ -19,7 +19,7 @@
             />
             <button class="btn" id="searchBtn"><i class="fas fa-search"></i></button>
             </div>
-            <i class="fa fa-shopping-cart cart-icon"></i>
+            <i class="fa fa-shopping-cart cart-icon" onclick="navigateTroCart()"></i>
             <span class='badge badge-warning' id='lblCartCount'> </span>
     </div>
     
