--- a/Shop Search/cart.html
+++ b/Shop Search/cart.html
@@ -8,8 +8,8 @@
     <title>Cart</title>
 </head>
 <body>
-<h2>cart page</h2>
-<div id="container">
+    <div id="container">
+    <h2>Your cart looks like....</h2>
 
 </div>
     <script src="cart.js"></script>
