--- a/Shop Search/cart.html
+++ b/Shop Search/cart.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.min.css'>
+
     <link rel="stylesheet" href="cart.style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
